k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: honoris-frontend
  namespace: honoris
spec:
  selector:
    app: honoris-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
